tests/minikube/test-apps/network-policies/k8s/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: test-pods
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
